# otus-space-battle

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  tasks.md
.github/workflows/: python-package.yml
app/: combined_commands.py  command.py  conftest.py  endpoint.py  exception_handler.py  exception_handler_store.py  exception_handlers.py  exceptions.py  fuel.py  game_loop.py  game_object.py  game_state.py  ioc.py  main.py  movement.py  rotation.py  server.py  value_types.py
app/autogenerated/adapters/: can_change_velocity.py  can_change_velocity_adapter.py  consumes_fuel_adapter.py  movable.py  movable_adapter.py  rotatable.py  rotatable_adapter.py  uses_fuel.py
app/core/: command.py  exception_handler_store.py  ioc.py  ioc_scoped.py
app/game/: conftest.py  uobject.py  value_types.py
app/game/behaviour/: combined_commands.py  fuel.py  movement.py  rotation.py
app/game/behaviour/tests/: test_combined_commands.py  test_fuel.py  test_movement.py  test_rotation.py
app/game/setup/: adapters.py  behaviour.py  message_handlers.py  state.py
app/game/state/: event_loop.py  exception_handlers.py  game_command.py  game_loop.py  game_state.py
app/game/state/tests/: test_event_loop.py  test_exception_handlers.py  test_game_command.py
app/game/tests/: test_value_types.py
app/game_server/: auth.py  endpoint.py  server.py
app/game_server/tests/: test_auth.py  test_endpoint.py
app/tests/: test_endpoint.py
auth_app/: app.py  main.py
auth_app/tests/: test_auth.py
codegen/: adapter.py  common.py  decorators.py  main.py
codegen/templates/: adapter.j2
codegen/tests/: test_adapter.py
keys/: private.pem  private_another.pem  public.pem
tests/: mocks.py  test_combined_commands.py  test_exception_handlers.py  test_fuel.py  test_ioc.py  test_ioc_scoped.py  test_macrocommands.py  test_movement.py  test_rotation.py  test_value_types.py
