[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = "^2.9.2"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
ruff = "^0.5.4"
pre-commit = "^3.7.1"
pyright = "^1.1.372"
jinja2 = "^3.1.4"



[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "E501",  # Line too long

  "D",  # pydocstyle
  "S",  # flake8-bandit
  "W",  # pycodestyle warnings (покрываются форматированием)
  "EM", "TRY003",  # Передача строк в конструктор исключений
  "TD", "FIX",  # flake8-todos, flake8-fixme
  "TCH",  # flake8-type-checking
  "ANN101", "ANN102",  # Missing type annotation for `self/cls`
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
  "RUF001", "RUF002", "RUF003",  # ambiguous character warnings (Не работают с кириллицей)
  "COM812", "ISC001",  # following rules may cause conflicts when used with the formatter
  "PGH003",  # Use specific rule codes when ignoring type issues
  "BLE001",  # Do not catch blind exception: `Exception`
  "ERA",  # Found commented-out code

  "PLR2004",  # Magic variable
  "T201",  # Print found
  "B017", "PT011"  # Checks for `pytest.raises(Exception)`
]



[tool.pyright]
include = ["app", "tests", "codegen", "auth_app"]
exclude = ["**/__pycache__"]
venvPath = "."
venv = ".venv"

reportUnnecessaryTypeIgnoreComment = true
enableTypeIgnoreComments = false
